Tue Oct 28 16:40:10 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * bin/tao_other_tests.lst:

          Disabled test for bug#3444 on LynxOS.

Tue Oct 28 16:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
        * bin/tao_orb_tests.lst:
          Moved Notify ValueType test to other tests

Tue Oct 28 10:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessWinCE.pm:
          New file for Windows CE cross testing. We are using the
          VxWorks support and added an environment variable
          ACE_TEST_WINCE. When this is set we are using WinCE instead
          of VxWorks. This script is not ready yet, a first version
          so that we can start resolving some small issues in our
          real test environment

        * bin/PerlACE/Run_Test.pm:
          Check for ACE_TEST_WINCE

Mon Oct 27 19:22:25 UTC 2008  Tim Pollock  <pollockt@ociweb.com>

        * bin/tao_other_tests.lst

          Added new test for DOC bug 2415.

Mon Oct 27 13:27:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added ACE_RUN_ACE_LD_SEARCH_PATH

Mon Oct 27 13:27:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added ACE_RUN_VX_STARTUP_COMMAND

Sun Oct 26 20:21:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.cpp:
        * ace/OS_NS_stdio.h:
          Removed scanf/fscanf/sscanf wrappers again. Microsoft
          doesn't ship them with msvc so these would then be
          a noop making them unusable

        * ace/fuzz.pl:
          Removed scanf/sscanf/fscanf from the ACE_OS check

        * ace/Multicast_Test.cpp
        * ace/Multicast_Test_IPV6.cpp
          Use plain sscanf

Sun Oct 26 18:47:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
